<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_hue">тон</string>
    <string name="title_saturation">насыщенность</string>
    <string name="title_value">значение</string>
    <string name="title_select_color">выбрать цвет</string>
    <string name="label_eraser">ластик</string>
    <string name="label_width">толщина</string>
    <string name="label_line">линия</string>
    <string name="label_alpha">прозрачность</string>
    <string name="title_apply_line_param">ВЫБРАТЬ ЭТИ ПАРАМЕТРЫ</string>
    <string name="title_dialog_color_params">Параметры цвета</string>
    <string name="dialog_title_line_params">Параметры линии</string>
    <string name="title_activity_remove_ad_mob">RemoveAdMobActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_ads">Реклама</string>
    <string name="message_we_will_check_payments">Проверка ранней покупки</string>
    <string name="title_error">Ошибка</string>
    <string name="message_error_purchases">Ошибка покупок. Попробуйте позже</string>
    <string name="title_activity_ndbilling_list_purchases">NDBillingListPurchasesActivity</string>
    <string name="title_purchasing">Покупка</string>
    <string name="dialog_purchases">Покупки</string>
    <string name="dialog_loading_purchases">Загрузка доступных покупок</string>

</resources>